--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db:/var/lib/mysql
 
 
-  app-timesheet:
+  app-school-backend:
     depends_on:
       - mysqldb
     image: nesrinelleuch/school-image:1.0.0
@@ -31,6 +31,14 @@ services:
       }'
     stdin_open: true
     tty: true
+
+app-school-frontend:
+    image: mouradhassini/student-front-image:1.0.0
+    restart: on-failure
+    ports:
+      -"8585:85"
+    depends_on:
+      - app-school-backend
 
 volumes:
   db :
